added initial files and navbar component

--- a/G4GClub-Amrita/src/index.css
+++ b/G4GClub-Amrita/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+:root {
+  background-image: url("./assets/vectors/Vector.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  font-family: "Source Sans 3", sans-serif;
+}
